--- a/0_config.yaml
+++ b/0_config.yaml
@@ -86,6 +86,13 @@ xgb_params:
   colsample_bytree: 0.8
 
 
+# =====================================
+# MOLECULE OPTIMIZER SETTINGS
+# =====================================
+candidates: 10
+iterations: 100
+
+
 # ====
 # MISC
 # ====
