--- a/0_config.yaml
+++ b/0_config.yaml
@@ -6,8 +6,9 @@ input_folder: "input_folder"
 assessments: "assessments"
 model_folder: "ml_models"
 input_fp_folder: "input_fingerprint_data"
-bioactivity_folder: "database"
+database: "database"
 padel_xmls: "padel_fp_xmls"
+network_folder: "network_folder"
 
 # [BIOACTIVITY DATABASE FILES]
 rawdf_1: "1_raw_bioact.csv"
@@ -96,6 +97,17 @@ target_increase: 1  # this is how much of an increase in pIC50 you are aiming to
 error_threshold: -0.05   # when we hit a plateau, how much are you willing to sacrifice in performance temporarily?
 success_threshold: 0.05   # what is the minimum performance increase you will accept?
 retain_threshold: 3  # how many times the molecule can fail to improve before exploring other optimization routes
+
+# =====================================
+# CHEM SPACE NETWORK GRAPH SETTINGS
+# =====================================
+colorscale: Viridis
+transparent_nodes: True  # makes nodes transparent if True -> lets you see the molecules better
+node_toggle: True   # keeps / removes nodes
+label_toggle: False  # just displays the hover text
+2D_molecules: True  # displays 2D structures
+node_size: 2
+
 
 # ====
 # MISC
