Enhanced ChemNet module to allow for Tanimoto similarity, Tanimoto MCS, and Hybrid weighing for CSN graph generation + 1 fix
CSN graphs can now be generating using 3 different edge-weight strategies:
- Tanimoto similarity: overall molecular structure
- Tanimoto MCS: maximum common substructure
- Hybrid: a weighted combination of both, with the bias controlled via the config setting 'tanimoto_bias' with a default value of 0.5
- Implemented via refactoring the list 'scored_subsets' into a dictionary containing molecule pair IDs as keys, and similarity scores as values. This dictionary would then be passed on to the function interactive_network for efficient scoring data lookup.

Usage and visualization of all three modes are executable from 01_main via csn_network.

Fixed a key issue in the 01_main function csn_data, where calculations were skipped due to '__main__' guard in the a05 file. Now calculations can occur from the 01_main.py file as the csn_data function contains "if __name__ == '__main__'":.

--- a/0_config.yaml
+++ b/0_config.yaml
@@ -107,6 +107,8 @@ node_toggle: True   # keeps / removes nodes
 label_toggle: False  # just displays the hover text
 2D_molecules: True  # displays 2D structures
 node_size: 2
+# NOTE: this is only active when the weight_method parameter for ChemNet is 'hybrid'
+tanimoto_bias: 0.5  # determines how much weight the plot is biased towards: overall similarity (1) or maximum common substructure (0)
 
 
 # ====
