NOCTURNAL v2.5.0 - Intelligent node sampling to prevent bottlenecks in a05_csnodes.py
Bottleneck solutions in a05_csnodes.py
a05_csnodes.py now allows for 3 intelligent sampling modes for MutaGen results that contain an extensive amount of molecules
- 'balanced': evenly samples across potency quartiles
- 'performance': selects the top compounds by pIC50
- 'mcs_optimized': prefilters by overall Tanimoto similarity and selects for the top 'n' to accelerate MCS calculations
	- NOTE: mcs_optimized samples may still require a significant amount of time to process since it requires all overall Tanimoto calculations prior to sorting and cutting down time on more intricate MCS calculations

- Adjusted ChemNet, utility and config to allow for intelligent sampling functionality and keeping track of what sampling strategies were used on which dataset

Reorganized README.md to accommodate these changes

--- a/0_config.yaml
+++ b/0_config.yaml
@@ -8,6 +8,7 @@ model_folder: "ml_models"
 input_fp_folder: "input_fingerprint_data"
 database: "database"
 padel_xmls: "padel_fp_xmls"
+optimizer_database: "optimizer_database"
 network_folder: "network_folder"
 
 # [BIOACTIVITY DATABASE FILES]
@@ -89,7 +90,7 @@ xgb_params:
 
 
 # =====================================
-# MOLECULE OPTIMIZER SETTINGS
+# MutaGen SETTINGS
 # =====================================
 candidates: 20    # how many copies of the starting molecule you want to undergo mutations
 iterations: 100   # how many times you want to introduce random mutations
@@ -98,8 +99,17 @@ error_threshold: -0.05   # when we hit a plateau, how much are you willing to sa
 success_threshold: 0.05   # what is the minimum performance increase you will accept?
 retain_threshold: 3  # how many times the molecule can fail to improve before exploring other optimization routes
 
+
 # =====================================
-# CHEM SPACE NETWORK GRAPH SETTINGS
+# CSNodes SETTINGS
+# sampling strategy options: balanced, performance, mcs_optimized
+# =====================================
+target_size: 100   # the target amount of nodes you want to show up in the CSN visualizations
+# Note: please use when coming across big datasets (200+) and using one of the sampling strategies to prevent bottlenecks
+
+
+# =====================================
+# ChemNet SETTINGS
 # =====================================
 colorscale: Viridis
 transparent_nodes: True  # makes nodes transparent if True -> lets you see the molecules better
